data/derived/sp14/progs/unify/prog2069.ml.out
Characters 53-60:
  | _ -> x::clone n-1;;
            ^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
